<resources>
    <string name="app_name">Path Finder</string>
    <string name="create_new_graph_1">Create new one direction graph</string>
    <string name="create_new_graph_2">Create new bi direction graph</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="load_from_file">Load from file</string>
    <string name="choose_custom_theme">Choose custom theme</string>
    <string name="help">Help</string>
    <string name="customize_button_description">Customize your app</string>
    <string name="authors"><![CDATA[Made by Dobrovolsky Ivan & Melnyk Iryna]]></string>
</resources>