<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/teal_200"
            android:backgroundTint="?colorSecondary"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="?colorOnSecondary" />

        <!--android:foreground="?android:attr/selectableItemBackground"-->
        <!--style="@android:style/Widget.Button"-->
        <TextView
            android:id="@+id/create_button"
            style="@style/ButtonStyle"
            android:text="@string/create_new_graph"
            app:drawableLeftCompat="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/load_button"
            style="@style/ButtonStyle"
            android:text="@string/load_from_file"
            app:drawableLeftCompat="@drawable/ic_download" />

        <TextView
            android:id="@+id/customize_button"
            style="@style/ButtonStyle"
            android:text="@string/choose_custom_theme"
            app:drawableLeftCompat="@drawable/ic_theme" />

        <TextView
            android:id="@+id/help_button"
            style="@style/ButtonStyle"
            android:text="@string/help"
            app:drawableLeftCompat="@drawable/ic_help" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/authors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>